THIS IS A PUSH REQUEST FOR PULL 1

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
-<h1> STACK COMMIT PUSH ! </h1>
+	<h1> THIS IS A PULL REQUEST LAB! <h1> 
+<h3> STACK COMMIT PUSH ! </h1>
      <body>
         <input type="text" placeholder="Enter Username" name="username" 
         required> <label>Password : </label> <input type="password"
